[gd_scene load_steps=2 format=3 uid="uid://cax8k7v6m4nqr"]

[ext_resource type="Script" uid="uid://bc7qyjbgiv1gs" path="res://algorithms/randomness/ten_print/TenPrint.gd" id="1_ten_print"]

[node name="TenPrint" type="Node3D"]
script = ExtResource("1_ten_print")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 10, 10)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 12, 0)
light_energy = 1.2

[node name="MazeLines" type="Node3D" parent="."]

[node name="GridNodes" type="Node3D" parent="."]

[node name="ProbabilityControl" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, -4, 0)
height = 1.0

[node name="GenerationSpeed" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, -4, 0)
size = Vector3(0.8, 1, 0.4)
